--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <h1>Ergute Bao</h1>
             <p class="contact-info">
                 13 Computing Drive, 117417, Singapore<br>
-                Email: baoergute8@gmail.com | Phone: +86 18126160962
+                Email: baoergute8@gmail.com
             </p>
         </header>
         
@@ -26,6 +26,9 @@
                         <a href="images/secondary-profile.jpg" target="_blank">
                             <img src="images/profile.jpg" alt="Profile Picture" class="profile-pic">
                         </a>
+                        <div class="profile-link">
+                            <a href="images/secondary-profile.jpg" target="_blank">View alternate photo</a>
+                        </div>
                     </div>
                 </div>
             </section>
@@ -54,32 +57,32 @@
                 <h2>Publications</h2>
                 <ul class="publication-list">
                     <li>
-                        <span class="pub-title">AAA: an Adaptive Mechanism for Locally Differential Private Mean Estimation</span>
+                        <span class="pub-title"><a href="#" target="_blank">AAA: an Adaptive Mechanism for Locally Differential Private Mean Estimation</a></span>
                         <span class="pub-authors">Fei Wei, Ergute Bao, Xiaokui Xiao, Yin Yang, and Bolin Ding</span>
                         <span class="pub-journal">Proceedings of the VLDB Endowment (PVLDB), 2024</span>
                     </li>
                     <li>
-                        <span class="pub-title">Communication Efficient and Differentially Private Logistic Regression under the Distributed Setting</span>
+                        <span class="pub-title"><a href="#" target="_blank">Communication Efficient and Differentially Private Logistic Regression under the Distributed Setting</a></span>
                         <span class="pub-authors">Ergute Bao, Dawei Gao, Xiaokui Xiao, Yaliang Li</span>
                         <span class="pub-journal">Proceedings of the SIGKDD Conference on Knowledge Discovery and Data Mining (SIGKDD), 2023</span>
                     </li>
                     <li>
-                        <span class="pub-title">Skellam Mixture Mechanism: a Novel Approach to Federated Learning with Differential Privacy</span>
+                        <span class="pub-title"><a href="#" target="_blank">Skellam Mixture Mechanism: a Novel Approach to Federated Learning with Differential Privacy</a></span>
                         <span class="pub-authors">Ergute Bao, Yizheng Zhu, Xiaokui Xiao, Yin Yang, Beng Chin Ooi, Benjamin H.M. Tan, Khin M.M. Aung</span>
                         <span class="pub-journal">Proceedings of the VLDB Endowment (PVLDB), 2022</span>
                     </li>
                     <li>
-                        <span class="pub-title">DPIS: an Enhanced Mechanism for Differentially Private SGD with Importance Sampling</span>
+                        <span class="pub-title"><a href="#" target="_blank">DPIS: an Enhanced Mechanism for Differentially Private SGD with Importance Sampling</a></span>
                         <span class="pub-authors">Jianxin Wei, Ergute Bao, Xiaokui Xiao, Yin Yang</span>
                         <span class="pub-journal">Proceedings of the ACM SIGSAC Conference on Computer and Communications Security (CCS), 2022</span>
                     </li>
                     <li>
-                        <span class="pub-title">CGM: An Enhanced Mechanism for Streaming Data Collection with Local Differential Privacy</span>
+                        <span class="pub-title"><a href="#" target="_blank">CGM: An Enhanced Mechanism for Streaming Data Collection with Local Differential Privacy</a></span>
                         <span class="pub-authors">Ergute Bao, Yin Yang, Xiaokui Xiao, and Bolin Ding</span>
                         <span class="pub-journal">Proceedings of the VLDB Endowment (PVLDB), 2021</span>
                     </li>
                     <li>
-                        <span class="pub-title">Synthetic Data Generation with Differential Privacy via Bayesian Networks</span>
+                        <span class="pub-title"><a href="#" target="_blank">Synthetic Data Generation with Differential Privacy via Bayesian Networks</a></span>
                         <span class="pub-authors">Ergute Bao, Xiaokui Xiao, Jun Zhao, Dongping Zhang and Bolin Ding</span>
                         <span class="pub-journal">Journal of Privacy and Confidentiality (JPC), 2021, 11(3)</span>
                         <span class="pub-note">Invited paper, based on our solution for 2018 NIST DP challenge</span>
