--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                             <img src="images/profile.jpg" alt="Profile Picture" class="profile-pic">
                         </a>
                         <div class="profile-link">
-                            <a href="images/secondary-profile.jpg" target="_blank">View alternate photo</a>
+                            <a href="images/secondary-profile.jpg" target="_blank">A clearer and better photo</a>
                         </div>
                     </div>
                 </div>
