--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>Ergute Bao</h1>
+            <h1>Ergute Bao (Bob)</h1>
             <p class="contact-info">
                 13 Computing Drive, 117417, Singapore<br>
                 Email: baoergute8@gmail.com
@@ -20,7 +20,7 @@
             <section id="bio" class="section">
                 <div class="content-wrapper">
                     <div class="text-content">
-                        <p>I obtained my PhD from National University of Singapore, supervised by Xiaokui Xiao, and BSc from the Chinese University of Hong Kong.</p>
+                        <p>I work on privacy-preserving machine learning. I obtained my PhD from National University of Singapore, supervised by Xiaokui Xiao, and BSc from the Chinese University of Hong Kong.</p>
                     </div>
                     <div class="image-content">
                         <a href="images/secondary-profile.jpg" target="_blank">
@@ -32,38 +32,39 @@
                     </div>
                 </div>
             </section>
+
             
             <section id="publications" class="section">
                 <h2>Publications</h2>
                 <ul class="publication-list">
                     <li>
-                        <span class="pub-title"><a href="#" target="_blank">AAA: an Adaptive Mechanism for Locally Differential Private Mean Estimation</a></span>
-                        <span class="pub-authors">Fei Wei, Ergute Bao, Xiaokui Xiao, Yin Yang, and Bolin Ding</span>
+                        <span class="pub-title"><a href="files/p1843-wei.pdf" target="_blank">AAA: an Adaptive Mechanism for Locally Differential Private Mean Estimation</a></span>
+                        <span class="pub-authors">Fei Wei, <em>E. Bao</em>, Xiaokui Xiao, Yin Yang, and Bolin Ding</span>
                         <span class="pub-journal">Proceedings of the VLDB Endowment (PVLDB), 2024</span>
                     </li>
                     <li>
-                        <span class="pub-title"><a href="#" target="_blank">Communication Efficient and Differentially Private Logistic Regression under the Distributed Setting</a></span>
-                        <span class="pub-authors">Ergute Bao, Dawei Gao, Xiaokui Xiao, Yaliang Li</span>
+                        <span class="pub-title"><a href="files/Communication_Efficient_and_Differentially_Private_Logistic_Regression_under_the_Distributed_Setting.pdf" target="_blank">Communication Efficient and Differentially Private Logistic Regression under the Distributed Setting</a></span>
+                        <span class="pub-authors"><em>E. Bao</em>, Dawei Gao, Xiaokui Xiao, Yaliang Li</span>
                         <span class="pub-journal">Proceedings of the SIGKDD Conference on Knowledge Discovery and Data Mining (SIGKDD), 2023</span>
                     </li>
                     <li>
-                        <span class="pub-title"><a href="#" target="_blank">Skellam Mixture Mechanism: a Novel Approach to Federated Learning with Differential Privacy</a></span>
-                        <span class="pub-authors">Ergute Bao, Yizheng Zhu, Xiaokui Xiao, Yin Yang, Beng Chin Ooi, Benjamin H.M. Tan, Khin M.M. Aung</span>
+                        <span class="pub-title"><a href="files/p2482-ergute.pdf" target="_blank">Skellam Mixture Mechanism: a Novel Approach to Federated Learning with Differential Privacy</a></span>
+                        <span class="pub-authors"><em>E. Bao</em>, Yizheng Zhu, Xiaokui Xiao, Yin Yang, Beng Chin Ooi, Benjamin H.M. Tan, Khin M.M. Aung</span>
                         <span class="pub-journal">Proceedings of the VLDB Endowment (PVLDB), 2022</span>
                     </li>
                     <li>
-                        <span class="pub-title"><a href="#" target="_blank">DPIS: an Enhanced Mechanism for Differentially Private SGD with Importance Sampling</a></span>
-                        <span class="pub-authors">Jianxin Wei, Ergute Bao, Xiaokui Xiao, Yin Yang</span>
+                        <span class="pub-title"><a href="files/DPIS_CCS.pdf" target="_blank">DPIS: an Enhanced Mechanism for Differentially Private SGD with Importance Sampling</a></span>
+                        <span class="pub-authors">Jianxin Wei, <em>E. Bao</em>, Xiaokui Xiao, Yin Yang</span>
                         <span class="pub-journal">Proceedings of the ACM SIGSAC Conference on Computer and Communications Security (CCS), 2022</span>
                     </li>
                     <li>
-                        <span class="pub-title"><a href="#" target="_blank">CGM: An Enhanced Mechanism for Streaming Data Collection with Local Differential Privacy</a></span>
-                        <span class="pub-authors">Ergute Bao, Yin Yang, Xiaokui Xiao, and Bolin Ding</span>
+                        <span class="pub-title"><a href="files/p2258-bao-technical.pdf" target="_blank">CGM: An Enhanced Mechanism for Streaming Data Collection with Local Differential Privacy</a></span>
+                        <span class="pub-authors"><em>E. Bao</em>, Yin Yang, Xiaokui Xiao, and Bolin Ding</span>
                         <span class="pub-journal">Proceedings of the VLDB Endowment (PVLDB), 2021</span>
                     </li>
                     <li>
-                        <span class="pub-title"><a href="#" target="_blank">Synthetic Data Generation with Differential Privacy via Bayesian Networks</a></span>
-                        <span class="pub-authors">Ergute Bao, Xiaokui Xiao, Jun Zhao, Dongping Zhang and Bolin Ding</span>
+                        <span class="pub-title"><a href="files/jpc.pdf" target="_blank">Synthetic Data Generation with Differential Privacy via Bayesian Networks</a></span>
+                        <span class="pub-authors"><em>E. Bao</em>, Xiaokui Xiao, Jun Zhao, Dongping Zhang and Bolin Ding</span>
                         <span class="pub-journal">Journal of Privacy and Confidentiality (JPC), 2021, 11(3)</span>
                         <span class="pub-note">Invited paper, based on our solution for 2018 NIST DP challenge</span>
                     </li>
@@ -96,12 +97,6 @@
             </section>
         </main>
         
-        <footer>
-            <div class="contact-info">
-                <p>Email: baoergute8@gmail.com</p>
-                <p><a href="#">GitHub</a></p>
-            </div>
-        </footer>
     </div>
 </body>
 </html>
