--- a/index.html
+++ b/index.html
@@ -76,8 +76,16 @@
                 <p>Conference reviewer in: International Conference on Very Large Data Bases (VLDB) 2026, International Conference on Machine Learning (ICML) 2022, International Conference on Database Systems for Advanced Applications (DASFAA) 2023-24 (Demo track).</p>
                 <p>Journal reviewer in: IEEE Transactions on Knowledge and Data Engineering (TKDE), IEEE Transactions on Information Forensics and Security (TIFS), IEEE Transactions on Privacy (ToP), Springer International Journal of Information Security (IJIS).</p>
             </section>
+            
+            <section id="contact" class="section">
+                <p><strong>Contact:</strong></p>
+                <p>Email: ergute.bao@gmail.com</p>
+            </section>
         </main>
         
+        <footer>
+            <p>Last updated: March 2025</p>
+        </footer>
     </div>
 </body>
 </html>
