--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ergute Bao (Bob)</title>
+    <title>Ergute Bao</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
         <header>
-            <h1>Ergute Bao</h1>
+            <h1>Ergute Bao (Bob)</h1>
             <div class="image-content" style="text-align: left;">
                 <a href="images/secondary-profile.jpg" target="_blank">
                     <img src="images/profile.jpg" alt="Profile Picture" class="profile-pic">
