--- a/index.html
+++ b/index.html
@@ -54,6 +54,14 @@
     
     <h2>Publications:</h2>
     <ul>
+        <li><b><a href="files/">Towards Learning on Vertically Partitioned Data with Distributed Differential Privacy.</a></b><br>
+        <i>E. Bao</i>, Fei Wei, Xiaokui Xiao, Tianyu Pang, and Chao Du<br>
+        Proceedings of the IEEE International Conference on Data Engineering (ICDE), 2025.</li>
+
+        <li><b><a href="files/">GCON: Differentially Private Graph Convolutional Network via Objective Perturbation.</a></b><br>
+        Jianxin Wei, Yizheng Zhu, Xiaokui Xiao, <i>E. Bao</i>, Yin Yang, and Beng Chin Ooi.<br>
+        Proceedings of the IEEE International Conference on Data Engineering (ICDE), 2025.</li>
+        
         <li><b><a href="files/p1843-wei.pdf">AAA: an Adaptive Mechanism for Locally Differential Private Mean Estimation</a></b><br>
         Fei Wei, <i>E. Bao</i>, Xiaokui Xiao, Yin Yang, and Bolin Ding<br>
         Proceedings of the VLDB Endowment (PVLDB), 2024.</li>
