--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <h2>Publications:</h2>
     <ul>
         <li><b><a href="files/">Towards Learning on Vertically Partitioned Data with Distributed Differential Privacy.</a></b><br>
-        <i>E. Bao</i>, Fei Wei, Xiaokui Xiao, Tianyu Pang, and Chao Du<br>
+        <i>E. Bao</i>, Fei Wei, Xiaokui Xiao, Yin Yang, Tianyu Pang, and Chao Du<br>
         Proceedings of the IEEE International Conference on Data Engineering (ICDE), 2025.</li>
 
         <li><b><a href="files/">GCON: Differentially Private Graph Convolutional Network via Objective Perturbation.</a></b><br>
