--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         Proceedings of the IEEE International Conference on Data Engineering (ICDE), 2025.</li>
 
         <li><b><a href="files/">GCON: Differentially Private Graph Convolutional Network via Objective Perturbation.</a></b><br>
-        Jianxin Wei, Yizheng Zhu, Xiaokui Xiao, <i>E. Bao</i>, Yin Yang, and Beng Chin Ooi.<br>
+        Jianxin Wei, Yizheng Zhu, Xiaokui Xiao, <i>E. Bao</i>, Yin Yang, Kuntai Cai, and Beng Chin Ooi.<br>
         Proceedings of the IEEE International Conference on Data Engineering (ICDE), 2025.</li>
         
         <li><b><a href="files/p1843-wei.pdf">AAA: an Adaptive Mechanism for Locally Differential Private Mean Estimation</a></b><br>
