--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     
     <h2>Services:</h2>
     <ul>
-        <li>Conference reviewer in: International Conference on Very Large Data Bases (VLDB) 2026, International Conference on Machine Learning (ICML) 2022, International Conference on Database Systems for Advanced Applications (DASFAA) 2023-24 (Demo track).</li>
+        <li>Conference reviewer in: International Conference on Very Large Data Bases (VLDB) 2026, IEEE International Conference on Data Engineering (ICDE) 2026, International Conference on Machine Learning (ICML) 2022, International Conference on Database Systems for Advanced Applications (DASFAA) 2023-24 (Demo track).</li>
     
         <li>Journal reviewer in: IEEE Transactions on Knowledge and Data Engineering (TKDE), IEEE Transactions on Information Forensics and Security (TIFS), IEEE Transactions on Privacy (ToP), Springer International Journal of Information Security (IJIS).</li>
     </ul>
