--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
     
     <h2>Publications:</h2>
     <ul>
-        <li><b><a href="files/">Towards Learning on Vertically Partitioned Data with Distributed Differential Privacy.</a></b><br>
+        <li><b><a href="https://www.computer.org/csdl/proceedings-article/icde/2025/360300c121/26FZAEYq0iQ">Towards Learning on Vertically Partitioned Data with Distributed Differential Privacy.</a></b><br>
         <i>E. Bao</i>, Fei Wei, Xiaokui Xiao, Yin Yang, Tianyu Pang, and Chao Du<br>
         Proceedings of the IEEE International Conference on Data Engineering (ICDE), 2025.</li>
 
-        <li><b><a href="files/">GCON: Differentially Private Graph Convolutional Network via Objective Perturbation.</a></b><br>
+        <li><b><a href="https://www.computer.org/csdl/proceedings-article/icde/2025/360300c507/26FZAYSBTRm">GCON: Differentially Private Graph Convolutional Network via Objective Perturbation.</a></b><br>
         Jianxin Wei, Yizheng Zhu, Xiaokui Xiao, <i>E. Bao</i>, Yin Yang, Kuntai Cai, and Beng Chin Ooi.<br>
         Proceedings of the IEEE International Conference on Data Engineering (ICDE), 2025.</li>
         
