--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <img src="images/profile.jpg" alt="Profile Picture">
     <p><a href="images/secondary-profile.jpg">A clearer and better photo</a></p>
     
-    <p>I work on privacy-preserving machine learning. I obtained my PhD from National University of Singapore, supervised by Xiaokui Xiao, and BSc from the Chinese University of Hong Kong.</p>
+    <p>I am a postdoc researcher in Mohamed bin Zayed University of Artificial Intelligence (Abu Dhabi, UAE), hosted by Ting Yu. I research on data privacy, with specific interests in its applications in differentially private data analysis and LLMs. I obtained my PhD from National University of Singapore, supervised by Xiaokui Xiao. Previously, I did internships at Alibaba Group and SEA AI Lab. Previously, I obtained my BSc from the Chinese University of Hong Kong.</p>
     
     <h2>Publications:</h2>
     <ul>
