--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     
     <h2>Publications:</h2>
     <ul>
-        <li><b><a href="">Unlocking the Power of Differentially Private Zeroth-order Optimization for Fine-tuning LLMs.</a></b><br>
+        <li><b><a href="https://github.com/erguteb/dp-aggzo/blob/main/tr.pdf">Unlocking the Power of Differentially Private Zeroth-order Optimization for Fine-tuning LLMs.</a></b><br>
         <i>E. Bao</i>, Yangfan Jiang, Fei Wei, Xiaokui Xiao, Zitao Li, Yaliang Li, and Bolin Ding<br>
         Proceedings of the USENIX Conference on Security Symposium (SEC), to appear, 2025. </li>
         
