--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ergute Bao</title>
+    <link rel="icon" type="image/jpeg" href="images/favicon.png">
     <style>
         body {
             font-family: Georgia, 'Times New Roman', Times, serif;
