--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <p>I am a postdoc researcher in Mohamed bin Zayed University of Artificial Intelligence, Abu Dhabi, UAE, hosted by Ting Yu. I research on data privacy, with specific interests in differential privacy for data analysis and large language models. I obtained my PhD in CS from National University of Singapore, supervised by Xiaokui Xiao, in 2024. Previously, I did internships at Alibaba Group and SEA AI Lab. Previously, I obtained my BSc in CS from the Chinese University of Hong Kong in 2018. Other than publishing papers in differential privacy, I also participated in challenges held by NIST, and our team won <a href="https://www.nist.gov/ctl/pscr/open-innovation-prize-challenges/past-prize-challenges/2018-differential-privacy-synthetic"> the third place in the 2018 Differential Privacy Synthetic Data Challenge</a> and 
         <a href="https://www.nist.gov/ctl/pscr/open-innovation-prize-challenges/past-prize-challenges/2020-differential-privacy-temporal"> the first place in the 2020 Privacy Temporal Map Challenge</a>. </p>
     
-    <h2>Publications:</h2>
+    <h2>Publications: <a href="https://scholar.google.com/citations?user=jHFjdcUAAAAJ&hl" target="_blank">[Google Scholar]</a> <a href="https://dblp.org/pid/300/4385" target="_blank">[DBLP]</a></h2>
     <ul>
         <li><b><a href="https://github.com/erguteb/dp-aggzo/blob/main/tr.pdf">Unlocking the Power of Differentially Private Zeroth-order Optimization for Fine-tuning LLMs.</a></b><br>
         <b>E. B.</b>, Yangfan Jiang, Fei Wei, Xiaokui Xiao, Zitao Li, Yaliang Li, and Bolin Ding<br>
