--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <body>
     <h1>Ergute Bao (Bob)</h1>
     
-    <img src="images/profile.jpg" alt="Profile Picture">
+    <img src="images/profile_small.jpg" alt="Profile Picture">
     <p><a href="images/secondary-profile.jpg">A clearer and better photo</a></p>
     
     <p>I am a postdoc researcher in Mohamed bin Zayed University of Artificial Intelligence, Abu Dhabi, UAE, working with Ting Yu. I research on data privacy, with specific interests in differential privacy for data analysis and large language models. <br> </p>
