--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     
     <h2>Publications: <a href="https://scholar.google.com/citations?user=jHFjdcUAAAAJ&hl" target="_blank">[Google Scholar]</a> <a href="https://dblp.org/pid/300/4385" target="_blank">[DBLP]</a></h2>
     <ul>
-        <li><b><a href="https://github.com/erguteb/dp-aggzo/blob/main/tr.pdf">Unlocking the Power of Differentially Private Zeroth-order Optimization for Fine-tuning LLMs.</a></b><br>
+        <li><b><a href="files/usenix_p186_merged.pdf">Unlocking the Power of Differentially Private Zeroth-order Optimization for Fine-tuning LLMs.</a></b><br>
         <b>E. B.</b>, Yangfan Jiang, Fei Wei, Xiaokui Xiao, Zitao Li, Yaliang Li, and Bolin Ding<br>
         Proceedings of the USENIX Conference on Security Symposium (<b>SEC</b>), to appear, 2025. </li>
         
