--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
     <img src="images/profile_small.jpg" alt="Profile Picture">
     <p><a href="images/secondary-profile.jpg">A clearer and better photo</a></p>
     
-    <p>I am a postdoc researcher in Mohamed bin Zayed University of Artificial Intelligence, Abu Dhabi, UAE, working with Ting Yu. I research on data privacy, with specific interests in differential privacy for data analysis and large language models. <br> </p>
+   <p>I am a postdoc researcher in Mohamed bin Zayed University of Artificial Intelligence, Abu Dhabi, UAE, working with Ting Yu. I research on data privacy, with specific interests in differential privacy for data analysis, federated learning (FL), and large language model (LLM). <br> </p>
 
-    <p>Previously, I obtained PhD in CS from National University of Singapore, supervised by Xiaokui Xiao, in 2024. Previously, I did internships at Alibaba Group and SEA AI Lab. Previously, I obtained BSc in CS from the Chinese University of Hong Kong in 2018. I also participated in challenges held by NIST, and our team won <a href="https://www.nist.gov/ctl/pscr/open-innovation-prize-challenges/past-prize-challenges/2018-differential-privacy-synthetic"> the third place in the 2018 Differential Privacy Synthetic Data Challenge</a> and 
-        <a href="https://www.nist.gov/ctl/pscr/open-innovation-prize-challenges/past-prize-challenges/2020-differential-privacy-temporal"> the first place in the 2020 Privacy Temporal Map Challenge</a>. </p>
+    <p>Previously, I obtained PhD in CS from National University of Singapore, supervised by Xiaokui Xiao, in 2024. Previously, I obtained BSc in CS from the Chinese University of Hong Kong in 2018. During my PhD, I have participated in Differential Privacy challenges held by NIST, and our team won <a href="https://www.nist.gov/ctl/pscr/open-innovation-prize-challenges/past-prize-challenges/2018-differential-privacy-synthetic"> the third place in 2018 </a> and 
+        <a href="https://www.nist.gov/ctl/pscr/open-innovation-prize-challenges/past-prize-challenges/2020-differential-privacy-temporal"> the first place in 2020. I have also enjoyed summers as a student intern in CUHK, SEA AI Lab, and Alibaba Group (while my mentors mostly suffered).</a>. </p>
     
     <h2>Publications: <a href="https://scholar.google.com/citations?user=jHFjdcUAAAAJ&hl" target="_blank">[Google Scholar]</a> <a href="https://dblp.org/pid/300/4385" target="_blank">[DBLP]</a></h2>
     <ul>
