--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
     
     <h2>Publications: <a href="https://scholar.google.com/citations?user=jHFjdcUAAAAJ&hl" target="_blank">[Google Scholar]</a> <a href="https://dblp.org/pid/300/4385" target="_blank">[DBLP]</a></h2>
     <ul>
-        <li><b><a href="files/usenix_p186_merged.pdf">Unlocking the Power of Differentially Private Zeroth-order Optimization for Fine-tuning LLMs.</a></b><br>
+        <li><b><a href="https://www.usenix.org/conference/usenixsecurity25/presentation/bao-ergute">Unlocking the Power of Differentially Private Zeroth-order Optimization for Fine-tuning LLMs.</a></b><br>
         <b>E. B.</b>, Yangfan Jiang, Fei Wei, Xiaokui Xiao, Zitao Li, Yaliang Li, and Bolin Ding<br>
-        Proceedings of the USENIX Conference on Security Symposium (<b>SEC</b>), to appear, 2025. </li>
+        Proceedings of the USENIX Conference on Security Symposium (<b>SEC</b>), to appear, 2025. <b><a href="errata.html">erratum</a></b> </li>
         
         <li><b><a href="https://www.computer.org/csdl/proceedings-article/icde/2025/360300c121/26FZAEYq0iQ">Towards Learning on Vertically Partitioned Data with Distributed Differential Privacy.</a></b><br>
         <b>E. B.</b>, Fei Wei, Xiaokui Xiao, Yin Yang, Tianyu Pang, and Chao Du<br>
