--- a/errata.html
+++ b/errata.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Errata</title>
+  <title>Erratum</title>
   <meta name="description" content="Errata note regarding differentially private zeroth-order fine-tuning attribution." />
   <style>
     :root { color-scheme: light dark; }
@@ -20,7 +20,7 @@
     <h1>Errata</h1>
     <p>
       The original <em>differentially private zeroth-order fine-tuning</em> was first proposed by
-      Zhang et&nbsp;al. Please refer to the following PDF for bibliographic details:
+      Zhang et&nbsp;al. The algorithm was named DPZero, instead of DPZO (we made a mistake in our camera ready-version). Please refer to the following PDF for bibliographic details:
     </p>
     <p>
       <a href="https://erguteb.github.io/files/usenix_p186_merged.pdf#page=14" target="_blank" rel="noopener">
