--- a/errata.html
+++ b/errata.html
@@ -19,8 +19,8 @@
   <main>
     <h1>Errata</h1>
     <p>
-      The original <em>differentially private zeroth-order fine-tuning</em> was first proposed by
-      Zhang et&nbsp;al. The algorithm was named DPZero, instead of DPZO (we made a mistake in our camera ready-version). Please refer to the following PDF for bibliographic details:
+      The original <em>differentially private zeroth-order fine-tuning algorithm</em> was first proposed by
+      Zhang et&nbsp;al. The algorithm was named <em>DPZero</em>, instead of <em>DPZO</em> (we made a mistake in our camera ready-version). Please refer to the following PDF for bibliographic details:
     </p>
     <p>
       <a href="https://erguteb.github.io/files/usenix_p186_merged.pdf#page=14" target="_blank" rel="noopener">
