--- a/errata.html
+++ b/errata.html
@@ -17,7 +17,7 @@
 </head>
 <body>
   <main>
-    <h1>Errata</h1>
+    <h1>Erratum</h1>
     <p>
       The original <em>differentially private zeroth-order fine-tuning algorithm</em> was first proposed by
       Zhang et&nbsp;al. The algorithm was named <em>DPZero</em>, instead of <em>DPZO</em> (we made a mistake in our camera ready-version). Please refer to the following PDF for bibliographic details:
