--- a/errata.html
+++ b/errata.html
@@ -20,7 +20,7 @@
     <h1>Erratum</h1>
     <p>
       The original <em>differentially private zeroth-order fine-tuning algorithm</em> was first proposed by
-      Zhang et&nbsp;al. The algorithm was named <em>DPZero</em>, instead of <em>DPZO</em> (we made a mistake in our camera ready-version). Please refer to the following PDF for bibliographic details:
+      Zhang et&nbsp;al. The algorithm was named <em>DPZero</em>, instead of <em>DPZO</em> (we made a mistake in our camera-ready version). Please refer to the following PDF for bibliographic details:
     </p>
     <p>
       <a href="https://erguteb.github.io/files/usenix_p186_merged.pdf#page=14" target="_blank" rel="noopener">
