--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
     
     <h2>Publications: <a href="https://scholar.google.com/citations?user=jHFjdcUAAAAJ&hl" target="_blank">[Google Scholar]</a> <a href="https://dblp.org/pid/300/4385" target="_blank">[DBLP]</a></h2>
     <ul>
+        <li><b>Accurate Table Question Answering with Accessible LLMs.</b><br>
+        Yangfan Jiang, Fei Wei, <b>E. B.</b>, Yaliang Li, Bolin Ding, Yin Yang, and Xiaokui Xiao.<br>
+        Proceedings of the IEEE International Conference on Data Engineering (<b>ICDE</b>), to appear, 2026.</li>
+        
         <li><b><a href="https://www.usenix.org/conference/usenixsecurity25/presentation/bao-ergute">Unlocking the Power of Differentially Private Zeroth-order Optimization for Fine-tuning LLMs.</a></b><br>
         <b>E. B.</b>, Yangfan Jiang, Fei Wei, Xiaokui Xiao, Zitao Li, Yaliang Li, and Bolin Ding<br>
         Proceedings of the USENIX Conference on Security Symposium (<b>SEC</b>), to appear, 2025. <b><a href="errata.html">erratum</a></b> </li>
