--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
     
     <h2>Publications: <a href="https://scholar.google.com/citations?user=jHFjdcUAAAAJ&hl" target="_blank">[Google Scholar]</a> <a href="https://dblp.org/pid/300/4385" target="_blank">[DBLP]</a></h2>
     <ul>
+        <li><b>Overcoming the Retrieval Barrier: \\ Indirect Prompt Injection in the Wild for LLM Systems.</b><br>
+        Hongyan Chang, <b>E. Bao</b>, Xinjian Luo, and Ting Yu.<br>
+        Proceedings of the USENIX Conference on Security Symposium (<b>SEC</b>), to appear, 2026.</li>
+        
         <li><b>Accurate Table Question Answering with Accessible LLMs.</b><br>
         Yangfan Jiang, Fei Wei, <b>E. Bao</b>, Yaliang Li, Bolin Ding, Yin Yang, and Xiaokui Xiao.<br>
         Proceedings of the IEEE International Conference on Data Engineering (<b>ICDE</b>), to appear, 2026.</li>
