--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <ul>
         <li><b>Overcoming the Retrieval Barrier: Indirect Prompt Injection in the Wild for LLM Systems.</b><br>
         Hongyan Chang, <b>E. Bao</b>, Xinjian Luo, and Ting Yu.<br>
-        Proceedings of the USENIX Conference on Security Symposium (<b>SEC</b>), to appear, 2026.</li>
+        Proceedings of the USENIX Conference on Security Symposium (<b>SEC</b>), to appear, 2026. <b><a href="https://arxiv.org/pdf/2601.07072">Full version</a></b></li>
         
         <li><b>Accurate Table Question Answering with Accessible LLMs.</b><br>
         Yangfan Jiang, Fei Wei, <b>E. Bao</b>, Yaliang Li, Bolin Ding, Yin Yang, and Xiaokui Xiao.<br>
