--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
     <ul>
         <li><b>Overcoming the Retrieval Barrier: Indirect Prompt Injection in the Wild for LLM Systems.</b><br>
         Hongyan Chang, <b>E. Bao</b>, Xinjian Luo, and Ting Yu.<br>
-        Proceedings of the USENIX Conference on Security Symposium (<b>SEC</b>), to appear, 2026. <b><a href="https://arxiv.org/pdf/2601.07072">Full version</a></b></li>
+        Proceedings of the USENIX Conference on Security Symposium (<b>SEC</b>), to appear, 2026. <b><a href="https://arxiv.org/pdf/2601.07072">Full version</a></b> </li>
         
         <li><b>Accurate Table Question Answering with Accessible LLMs.</b><br>
         Yangfan Jiang, Fei Wei, <b>E. Bao</b>, Yaliang Li, Bolin Ding, Yin Yang, and Xiaokui Xiao.<br>
-        Proceedings of the IEEE International Conference on Data Engineering (<b>ICDE</b>), to appear, 2026.</li>
+        Proceedings of the IEEE International Conference on Data Engineering (<b>ICDE</b>), to appear, 2026. <b><a href="https://arxiv.org/pdf/2601.03137">Full version</a></b> </li>
         
         <li><b><a href="https://www.usenix.org/conference/usenixsecurity25/presentation/bao-ergute">Unlocking the Power of Differentially Private Zeroth-order Optimization for Fine-tuning LLMs.</a></b><br>
         <b>E. Bao</b>, Yangfan Jiang, Fei Wei, Xiaokui Xiao, Zitao Li, Yaliang Li, and Bolin Ding<br>
